@@ -24,6 +24,7 @@ exportClasses(SeqVarData,
 
 exportMethods(sampleData, "sampleData<-",
               variantData, "variantData<-",
+              validateSex,
               granges,
               variantBlock,
               lastVariant, "lastVariant<-",
